fixed some layout issues for narrow views

--- a/src/kanban-flow.css
+++ b/src/kanban-flow.css
@@ -77,6 +77,7 @@
 	text-align: center;
 	border: 1px solid black;
 	background-color: #eea;
+    overflow: hidden;
 }
 
 
@@ -130,6 +131,7 @@
     vertical-align: top;
 	width: 100%;
 	background-color: #f9f9f9;
+	overflow:auto;
 }
 
 .settings-table input[type="text"] {
